tests/ui/enum-discriminant/discriminant-ill-typed.stderr
error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:15:16
   |
LL |         OhNo = 0_u8,
   |                ^^^^ expected `i8`, found `u8`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `u8` to `i8`
   |
LL -         OhNo = 0_u8,
LL +         OhNo = 0_i8,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:29:16
   |
LL |         OhNo = 0_i8,
   |                ^^^^ expected `u8`, found `i8`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `i8` to `u8`
   |
LL -         OhNo = 0_i8,
LL +         OhNo = 0_u8,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:43:16
   |
LL |         OhNo = 0_u16,
   |                ^^^^^ expected `i16`, found `u16`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `u16` to `i16`
   |
LL -         OhNo = 0_u16,
LL +         OhNo = 0_i16,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:57:16
   |
LL |         OhNo = 0_i16,
   |                ^^^^^ expected `u16`, found `i16`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `i16` to `u16`
   |
LL -         OhNo = 0_i16,
LL +         OhNo = 0_u16,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:71:16
   |
LL |         OhNo = 0_u32,
   |                ^^^^^ expected `i32`, found `u32`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `u32` to `i32`
   |
LL -         OhNo = 0_u32,
LL +         OhNo = 0_i32,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:85:16
   |
LL |         OhNo = 0_i32,
   |                ^^^^^ expected `u32`, found `i32`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `i32` to `u32`
   |
LL -         OhNo = 0_i32,
LL +         OhNo = 0_u32,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:99:16
   |
LL |         OhNo = 0_u64,
   |                ^^^^^ expected `i64`, found `u64`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `u64` to `i64`
   |
LL -         OhNo = 0_u64,
LL +         OhNo = 0_i64,
   |

error[E0308]: mismatched types
  --> $DIR/discriminant-ill-typed.rs:113:16
   |
LL |         OhNo = 0_i64,
   |                ^^^^^ expected `u64`, found `i64`
   |
   = note: enum variant discriminant can only be of a primitive type compatible with the enum's `repr`
help: change the type of the numeric literal from `i64` to `u64`
   |
LL -         OhNo = 0_i64,
LL +         OhNo = 0_u64,
   |

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
